--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "sequelize": "^6.33.0",
