--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Port number
-PORT=3000
+PORT=3002
 NODE_ENV="development"
 # URL of the DB
 DB_HOST=localhost
-DB_PASSWORD=9446238099@naz
+DB_PASSWORD=admin
 DB_NAME=recipesapp_db
 DB_USER=postgres
 DB_PORT=5432
