--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT=3002
 NODE_ENV="development"
 # URL of the DB
 DB_HOST=localhost
-DB_PASSWORD=admin
+DB_PASSWORD=9446238099@naz
 DB_NAME=recipesapp_db
 DB_USER=postgres
 DB_PORT=5432
